@@ -1,6 +1,6 @@
 package uk.gov.hmcts.reform.hmc.utils;
 
-import org.assertj.core.util.Lists;
+import com.google.common.collect.Lists;
 import uk.gov.hmcts.reform.hmc.data.ActualAttendeeIndividualDetailEntity;
 import uk.gov.hmcts.reform.hmc.data.ActualHearingDayEntity;
 import uk.gov.hmcts.reform.hmc.data.ActualHearingDayPausesEntity;
@@ -20,12 +20,22 @@ import uk.gov.hmcts.reform.hmc.data.IndividualDetailEntity;
 import uk.gov.hmcts.reform.hmc.data.LinkedGroupDetails;
 import uk.gov.hmcts.reform.hmc.data.NonStandardDurationsEntity;
 import uk.gov.hmcts.reform.hmc.data.OrganisationDetailEntity;
+import uk.gov.hmcts.reform.hmc.data.PanelAuthorisationRequirementsEntity;
 import uk.gov.hmcts.reform.hmc.data.PanelRequirementsEntity;
+import uk.gov.hmcts.reform.hmc.data.PanelSpecialismsEntity;
+import uk.gov.hmcts.reform.hmc.data.PanelUserRequirementsEntity;
+import uk.gov.hmcts.reform.hmc.data.PartyRelationshipDetailsEntity;
+import uk.gov.hmcts.reform.hmc.data.ReasonableAdjustmentsEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredFacilitiesEntity;
 import uk.gov.hmcts.reform.hmc.data.RequiredLocationsEntity;
 import uk.gov.hmcts.reform.hmc.data.UnavailabilityEntity;
+import uk.gov.hmcts.reform.hmc.domain.model.enums.LinkType;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.ListAssistCaseStatus;
 import uk.gov.hmcts.reform.hmc.domain.model.enums.ListingStatus;
+import uk.gov.hmcts.reform.hmc.model.ActualHearingDay;
+import uk.gov.hmcts.reform.hmc.model.ActualHearingDayParties;
+import uk.gov.hmcts.reform.hmc.model.ActualHearingDayPartyDetail;
+import uk.gov.hmcts.reform.hmc.model.ActualHearingDayPauseDayTime;
 import uk.gov.hmcts.reform.hmc.model.Attendee;
 import uk.gov.hmcts.reform.hmc.model.CaseCategory;
 import uk.gov.hmcts.reform.hmc.model.CaseCategoryType;
@@ -35,6 +45,8 @@ import uk.gov.hmcts.reform.hmc.model.DayOfWeekUnAvailableType;
 import uk.gov.hmcts.reform.hmc.model.DayOfWeekUnavailable;
 import uk.gov.hmcts.reform.hmc.model.DeleteHearingRequest;
 import uk.gov.hmcts.reform.hmc.model.GetHearingsResponse;
+import uk.gov.hmcts.reform.hmc.model.HearingActual;
+import uk.gov.hmcts.reform.hmc.model.HearingActualsOutcome;
 import uk.gov.hmcts.reform.hmc.model.HearingDaySchedule;
 import uk.gov.hmcts.reform.hmc.model.HearingDetails;
 import uk.gov.hmcts.reform.hmc.model.HearingLocation;
@@ -50,12 +62,14 @@ import uk.gov.hmcts.reform.hmc.model.PartyDetails;
 import uk.gov.hmcts.reform.hmc.model.PartyType;
 import uk.gov.hmcts.reform.hmc.model.RelatedParty;
 import uk.gov.hmcts.reform.hmc.model.RequestDetails;
+import uk.gov.hmcts.reform.hmc.model.RequirementType;
 import uk.gov.hmcts.reform.hmc.model.UnavailabilityDow;
 import uk.gov.hmcts.reform.hmc.model.UnavailabilityRanges;
 import uk.gov.hmcts.reform.hmc.model.UpdateHearingRequest;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -64,10 +78,13 @@ import java.util.List;
 import static uk.gov.hmcts.reform.hmc.constants.Constants.CANCELLATION_REQUESTED;
 import static uk.gov.hmcts.reform.hmc.constants.Constants.POST_HEARING_STATUS;
 import static uk.gov.hmcts.reform.hmc.constants.Constants.UNAVAILABILITY_DOW_TYPE;
+import static uk.gov.hmcts.reform.hmc.constants.Constants.UNAVAILABILITY_RANGE_TYPE;
 
 public class TestingUtil {
 
     public static final String CASE_REFERENCE = "1111222233334444";
+    public static final String INVALID_CASE_REFERENCE = "1111222233334445";
+    public static Long ID = 2000000000L;
 
     private TestingUtil() {
     }
@@ -77,7 +94,6 @@ public class TestingUtil {
     }
 
     public static HearingDetails hearingDetails() {
-
         HearingDetails hearingDetails = new HearingDetails();
         hearingDetails.setAutoListFlag(true);
         hearingDetails.setHearingType("Some hearing type");
@@ -85,8 +101,8 @@ public class TestingUtil {
         hearingWindow.setDateRangeEnd(LocalDate.parse("2017-03-01"));
         hearingWindow.setDateRangeStart(LocalDate.parse("2017-03-01"));
         hearingDetails.setHearingWindow(hearingWindow);
-        hearingDetails.setDuration(0);
-        hearingDetails.setNonStandardHearingDurationReasons(Arrays.asList("First reason", "Second reason"));
+        hearingDetails.setDuration(360);
+        hearingDetails.setNonStandardHearingDurationReasons(List.of("First reason", "Second reason"));
         hearingDetails.setHearingPriorityType("Priority type");
         hearingDetails.setHearingIsLinkedFlag(Boolean.TRUE);
         HearingLocation location1 = new HearingLocation();
@@ -95,7 +111,7 @@ public class TestingUtil {
         List<HearingLocation> hearingLocations = new ArrayList<>();
         hearingLocations.add(location1);
         hearingDetails.setHearingLocations(hearingLocations);
-        hearingDetails.setFacilitiesRequired(Arrays.asList("facility1", "facility2"));
+        hearingDetails.setFacilitiesRequired(List.of("facility1", "facility2"));
         return hearingDetails;
     }
 
@@ -113,6 +129,34 @@ public class TestingUtil {
         return panelRequirements;
     }
 
+    public static PanelAuthorisationRequirementsEntity panelAuthorisationRequirementsEntity() {
+        PanelAuthorisationRequirementsEntity panelAuthorisationRequirements
+            = new PanelAuthorisationRequirementsEntity();
+        panelAuthorisationRequirements.setAuthorisationType("AuthorisationType1");
+        panelAuthorisationRequirements.setAuthorisationSubType("AuthorisationSubType2");
+        return panelAuthorisationRequirements;
+    }
+
+    public static PanelSpecialismsEntity panelSpecialismsEntity() {
+        PanelSpecialismsEntity panelRequirements = new PanelSpecialismsEntity();
+        panelRequirements.setSpecialismType("Specialism 1");
+        return panelRequirements;
+    }
+
+    public static ReasonableAdjustmentsEntity reasonableAdjustmentsEntity() {
+        ReasonableAdjustmentsEntity reasonableAdjustments = new ReasonableAdjustmentsEntity();
+        reasonableAdjustments.setReasonableAdjustmentCode("First reason");
+        return reasonableAdjustments;
+    }
+
+    public static PanelUserRequirementsEntity panelUserRequirementsEntity() {
+        PanelUserRequirementsEntity panelUserRequirements = new PanelUserRequirementsEntity();
+        panelUserRequirements.setUserType("Type 1");
+        panelUserRequirements.setJudicialUserId("judge1");
+        panelUserRequirements.setRequirementType(RequirementType.MUSTINC);
+        return panelUserRequirements;
+    }
+
     public static RequiredFacilitiesEntity facilityEntity() {
         RequiredFacilitiesEntity requiredFacilitiesEntity = new RequiredFacilitiesEntity();
         requiredFacilitiesEntity.setFacilityType("RoleType1");
@@ -125,14 +169,24 @@ public class TestingUtil {
         return requiredLocationsEntity;
     }
 
-    public static UnavailabilityEntity unavailabilityEntity() {
+    public static List<UnavailabilityEntity> unavailabilityEntity() {
+        List<UnavailabilityEntity> unavailabilityEntities = new ArrayList<>();
+        setUnAvailabilityValues(unavailabilityEntities, UNAVAILABILITY_DOW_TYPE);
+        setUnAvailabilityValues(unavailabilityEntities, UNAVAILABILITY_RANGE_TYPE);
+        return unavailabilityEntities;
+    }
+
+    private static void setUnAvailabilityValues(List<UnavailabilityEntity> unavailabilityEntities,
+                                                String unavailabilityType) {
+        LocalDate startDate = LocalDate.of(2020, 12, 20);
+        LocalDate endDate = LocalDate.of(2020, 12, 20);
         UnavailabilityEntity unavailabilityEntity = new UnavailabilityEntity();
         unavailabilityEntity.setDayOfWeekUnavailable(DayOfWeekUnavailable.FRIDAY);
-        unavailabilityEntity.setEndDate(LocalDate.of(2020, 12, 20));
+        unavailabilityEntity.setEndDate(endDate);
         unavailabilityEntity.setDayOfWeekUnavailableType(DayOfWeekUnAvailableType.ALL);
-        unavailabilityEntity.setStartDate(LocalDate.of(2020, 12, 20));
-        unavailabilityEntity.setUnAvailabilityType(UNAVAILABILITY_DOW_TYPE);
-        return unavailabilityEntity;
+        unavailabilityEntity.setStartDate(startDate);
+        unavailabilityEntity.setUnAvailabilityType(unavailabilityType);
+        unavailabilityEntities.add(unavailabilityEntity);
     }
 
     public static OrganisationDetailEntity organisationDetailEntity() {
@@ -151,9 +205,9 @@ public class TestingUtil {
         individualDetailEntity.setChannelType("channelType");
         individualDetailEntity.setInterpreterLanguage("english");
         individualDetailEntity.setVulnerableFlag(true);
-        individualDetailEntity.setRelatedPartyRelationshipType("relationshipType");
-        individualDetailEntity.setRelatedPartyID("id");
         individualDetailEntity.setVulnerabilityDetails("details");
+        individualDetailEntity.setCustodyStatus("custodyStatus");
+        individualDetailEntity.setOtherReasonableAdjustmentDetails("otherReason");
         return individualDetailEntity;
     }
 
@@ -168,7 +222,7 @@ public class TestingUtil {
         partyDetails2.setPartyType("IND");
         partyDetails2.setPartyRole("DEF2");
 
-        return Lists.newArrayList(partyDetails1, partyDetails2);
+        return List.of(partyDetails1, partyDetails2);
     }
 
     public static List<CaseCategoriesEntity> caseCategoriesEntities() {
@@ -238,10 +292,38 @@ public class TestingUtil {
         HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(1L);
         hearingEntity.setStatus(POST_HEARING_STATUS);
+        hearingEntity.setLinkedOrder(1L);
+        CaseHearingRequestEntity caseHearingRequestEntity = caseHearingRequestEntity();
+        caseHearingRequestEntity.setHearingParties(List.of(new HearingPartyEntity()));
+        hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntity));
+        return hearingEntity;
+    }
+
+    public static HearingEntity hearingEntityWithLinkDetails() {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(1L);
+        hearingEntity.setStatus(POST_HEARING_STATUS);
+        hearingEntity.setLinkedOrder(1L);
+        LinkedGroupDetails linkedGroupDetailsEntity = linkedGroupDetailsEntity();
+        hearingEntity.setLinkedGroupDetails(linkedGroupDetailsEntity);
+        hearingEntity.setLinkedOrder(1L);
         hearingEntity.setIsLinkedFlag(Boolean.TRUE);
         CaseHearingRequestEntity caseHearingRequestEntity = caseHearingRequestEntity();
         hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntity));
         return hearingEntity;
+    }
+
+    public static LinkedGroupDetails linkedGroupDetailsEntity() {
+        LinkedGroupDetails entity = new LinkedGroupDetails();
+        entity.setLinkedGroupId(1L);
+        entity.setRequestName("RequestName");
+        entity.setReasonForLink("ReasonForLink");
+        entity.setLinkType(LinkType.ORDERED);
+        entity.setLinkedComments("linkComments");
+        entity.setStatus("PENDING");
+        entity.setRequestDateTime(LocalDateTime.now());
+        entity.setLinkedGroupLatestVersion(1L);
+        return entity;
     }
 
     public static CaseHearingRequestEntity caseHearingRequestEntity() {
@@ -303,9 +385,15 @@ public class TestingUtil {
         return request;
     }
 
+    public static UpdateHearingRequest updateHearingRequest() {
+        return updateHearingRequest(1);
+    }
+
     public static UpdateHearingRequest updateHearingRequest(int version) {
         UpdateHearingRequest request = new UpdateHearingRequest();
-        request.setHearingDetails(hearingDetails());
+        HearingDetails hearingDetails = hearingDetails();
+        hearingDetails.setAmendReasonCode("reason");
+        request.setHearingDetails(hearingDetails);
         request.setCaseDetails(caseDetails());
         request.getHearingDetails().setPanelRequirements(TestingUtil.panelRequirements());
         RequestDetails requestDetails = new RequestDetails();
@@ -314,13 +402,24 @@ public class TestingUtil {
         return request;
     }
 
-    public static UpdateHearingRequest updateHearingRequest() {
-        return updateHearingRequest(1);
+    public static UpdateHearingRequest updateHearingRequestWithCaseSubType(int version) {
+        UpdateHearingRequest request = new UpdateHearingRequest();
+        HearingDetails hearingDetails = hearingDetails();
+        hearingDetails.setAmendReasonCode("reason");
+        request.setHearingDetails(hearingDetails);
+        request.setCaseDetails(caseDetailsWithCaseSubType());
+        request.getHearingDetails().setPanelRequirements(TestingUtil.panelRequirements());
+        RequestDetails requestDetails = new RequestDetails();
+        requestDetails.setVersionNumber(version);
+        request.setRequestDetails(requestDetails);
+        return request;
     }
 
     public static UpdateHearingRequest validUpdateHearingRequest() {
         UpdateHearingRequest request = new UpdateHearingRequest();
-        request.setHearingDetails(hearingDetails());
+        HearingDetails hearingDetails = hearingDetails();
+        hearingDetails.setAmendReasonCode("reason");
+        request.setHearingDetails(hearingDetails);
         CaseDetails caseDetails = getValidCaseDetails();
         request.setCaseDetails(caseDetails);
         request.getHearingDetails().setPanelRequirements(TestingUtil.panelRequirements());
@@ -349,6 +448,30 @@ public class TestingUtil {
         return caseDetails;
     }
 
+    public static CaseDetails caseDetailsWithCaseSubType() {
+        CaseDetails caseDetails = new CaseDetails();
+        caseDetails.setHmctsServiceCode("ABA1");
+        caseDetails.setCaseRef(CASE_REFERENCE);
+        caseDetails.setCaseDeepLink("https://www.google.com");
+        caseDetails.setHmctsInternalCaseName("Internal case name");
+        caseDetails.setPublicCaseName("Public case name");
+        caseDetails.setCaseManagementLocationCode("CMLC123");
+        caseDetails.setCaseRestrictedFlag(false);
+        caseDetails.setCaseSlaStartDate(LocalDate.parse("2017-03-01"));
+        CaseCategory category = new CaseCategory();
+        category.setCategoryType("CASETYPE");
+        category.setCategoryValue("PROBATE");
+        CaseCategory categorySubType = new CaseCategory();
+        categorySubType.setCategoryType("CASESUBTYPE");
+        categorySubType.setCategoryValue("PROBATE");
+        categorySubType.setCategoryParent("PROBATE");
+        List<CaseCategory> caseCategories = new ArrayList<>();
+        caseCategories.add(category);
+        caseCategories.add(categorySubType);
+        caseDetails.setCaseCategories(caseCategories);
+        return caseDetails;
+    }
+
     public static CaseDetails getValidCaseDetails() {
 
         CaseDetails caseDetails = new CaseDetails();
@@ -367,6 +490,7 @@ public class TestingUtil {
         CaseCategory categorySubType = new CaseCategory();
         categorySubType.setCategoryType("caseSubType");
         categorySubType.setCategoryValue("PROBATE");
+        categorySubType.setCategoryParent("PROBATE");
         List<CaseCategory> caseCategories = new ArrayList<>();
         caseCategories.add(category);
         caseCategories.add(categorySubType);
@@ -388,7 +512,7 @@ public class TestingUtil {
         getHearingsResponse.setCaseRef(caseRef);
         getHearingsResponse.setHmctsServiceCode("AB1A");
         CaseHearing caseHearing = new CaseHearing();
-        caseHearing.setHearingId(2000000000L);
+        caseHearing.setHearingId(ID);
         caseHearing.setHearingRequestDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
         caseHearing.setHearingType("45YAO6VflHAmYy7N85fv");
         caseHearing.setHmcStatus("HEARING_REQUESTED");
@@ -419,10 +543,30 @@ public class TestingUtil {
     public static CaseHearingRequestEntity getCaseHearingsEntities() {
         CaseHearingRequestEntity entity = new CaseHearingRequestEntity();
         HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(ID);
+        hearingEntity.setIsLinkedFlag(Boolean.TRUE);
+        entity.setCaseHearingID(ID);
+        hearingEntity.setStatus("HEARING_REQUESTED");
+        entity.setVersionNumber(1);
+        hearingEntity.setIsLinkedFlag(true);
+        hearingEntity.setLinkedGroupDetails(getLinkedGroupDetails());
+        entity.setHearing(hearingEntity);
+        entity.setHmctsServiceCode("ABA1");
+        entity.setCaseReference("12345");
+        entity.setHearingType("Some hearing type");
+        entity.getHearing().setHearingResponses(List.of(hearingResponseEntities()));
+        entity.getHearing().getHearingResponses().get(0)
+            .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
+        return entity;
+    }
+
+    public static CaseHearingRequestEntity getCaseHearingsEntities(String status) {
+        CaseHearingRequestEntity entity = new CaseHearingRequestEntity();
+        HearingEntity hearingEntity = new HearingEntity();
         hearingEntity.setId(2000000000L);
         hearingEntity.setIsLinkedFlag(Boolean.TRUE);
         entity.setCaseHearingID(2000000000L);
-        hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setStatus(status);
         entity.setVersionNumber(1);
         hearingEntity.setIsLinkedFlag(true);
         hearingEntity.setLinkedGroupDetails(getLinkedGroupDetails());
@@ -461,8 +605,8 @@ public class TestingUtil {
     private static void getFirstEntity(List<CaseHearingRequestEntity> entities) {
         CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
         HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
-        entity1.setCaseHearingID(2000000000L);
+        hearingEntity.setId(ID);
+        entity1.setCaseHearingID(ID);
         hearingEntity.setStatus("HEARING_REQUESTED");
         entity1.setHearing(hearingEntity);
         entity1.setHmctsServiceCode("ABA1");
@@ -472,6 +616,62 @@ public class TestingUtil {
         entity1.getHearing().getHearingResponses().get(0)
             .setHearingDayDetails(List.of(hearingDayDetailsEntities()));
         entities.add(entity1);
+    }
+
+    public static HearingActual getHearingActual(HearingActualsOutcome hearingActualsOutcome,
+                                                 List<ActualHearingDay> actualHearingDays) {
+        HearingActual hearingActual = new HearingActual();
+        hearingActual.setActualHearingDays(actualHearingDays);
+        hearingActual.setHearingOutcome(hearingActualsOutcome);
+        return hearingActual;
+    }
+
+    public static HearingActualsOutcome getHearingActualOutcome(String hearingType, Boolean hearingFinal,
+                                                                String hearingResult, String hearingReason,
+                                                                LocalDate hearingDate) {
+        HearingActualsOutcome hearingActualsOutcome = new HearingActualsOutcome();
+        hearingActualsOutcome.setHearingType(hearingType);
+        hearingActualsOutcome.setHearingFinalFlag(hearingFinal);
+        hearingActualsOutcome.setHearingResult(hearingResult);
+        hearingActualsOutcome.setHearingResultReasonType(hearingReason);
+        hearingActualsOutcome.setHearingResultDate(hearingDate);
+        return hearingActualsOutcome;
+    }
+
+    public static ActualHearingDay getHearingActualDay(LocalDate hearingDate, LocalDateTime startTime,
+                                                       LocalDateTime endTime,
+                                                       List<ActualHearingDayPauseDayTime> pauseDateTimes,
+                                                       List<ActualHearingDayParties> actualDayParties) {
+        ActualHearingDay hearingActualDay = new ActualHearingDay();
+        hearingActualDay.setHearingDate(hearingDate);
+        hearingActualDay.setHearingStartTime(startTime);
+        hearingActualDay.setHearingEndTime(endTime);
+        hearingActualDay.setActualDayParties(actualDayParties);
+        hearingActualDay.setPauseDateTimes(pauseDateTimes);
+        return hearingActualDay;
+    }
+
+    public static ActualHearingDayPauseDayTime getHearingActualDayPause(LocalDateTime startTime,
+                                                                        LocalDateTime endTime) {
+        ActualHearingDayPauseDayTime actualHearingDayPauseDayTime = new ActualHearingDayPauseDayTime();
+        actualHearingDayPauseDayTime.setPauseEndTime(endTime);
+        actualHearingDayPauseDayTime.setPauseStartTime(startTime);
+        return actualHearingDayPauseDayTime;
+    }
+
+    public static ActualHearingDayParties getHearingActualDayParties(
+        String partyId, String partyRole, ActualHearingDayPartyDetail individualDetails,
+            String actualOrganisationName, String partyChannelSubType, Boolean didNotAttendFlag,
+        String representedParty) {
+        ActualHearingDayParties actualHearingDayParties = new ActualHearingDayParties();
+        actualHearingDayParties.setActualPartyId(partyId);
+        actualHearingDayParties.setPartyRole(partyRole);
+        actualHearingDayParties.setIndividualDetails(individualDetails);
+        actualHearingDayParties.setActualOrganisationName(actualOrganisationName);
+        actualHearingDayParties.setPartyChannelSubType(partyChannelSubType);
+        actualHearingDayParties.setDidNotAttendFlag(didNotAttendFlag);
+        actualHearingDayParties.setRepresentedParty(representedParty);
+        return actualHearingDayParties;
     }
 
     private static void getSecondEntity(List<CaseHearingRequestEntity> entities) {
@@ -507,7 +707,6 @@ public class TestingUtil {
         entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
         entity.setVenueId("venue1");
         entity.setRoomId("room1");
-        entity.setListAssistSessionId("session1");
         entity.setHearingAttendeeDetails(List.of(hearingAttendeeDetailsEntity()));
         entity.setHearingDayPanel(List.of(hearingDayPanelEntities()));
         return entity;
@@ -536,9 +735,9 @@ public class TestingUtil {
 
     public static HearingEntity getCaseHearingsEntity(PartyType partyType) {
         HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
+        hearingEntity.setId(ID);
         hearingEntity.setStatus("HEARING_REQUESTED");
-        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
+        hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         if (partyType.getLabel() == PartyType.IND.getLabel()) {
             hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
         } else {
@@ -550,8 +749,21 @@ public class TestingUtil {
 
     public static HearingEntity getCaseHearingsEntity() {
         HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
+        hearingEntity.setId(ID);
         hearingEntity.setStatus("HEARING_REQUESTED");
+        hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
+        hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
+
+        hearingEntity.getCaseHearingRequests().get(0).setVersionNumber(1);
+        hearingEntity.getCaseHearingRequests().get(0).setHearingParties(List.of(
+            hearingPartyEntitySetReference("reference")));
+        return hearingEntity;
+    }
+
+    public static HearingEntity getCaseHearingsEntity(String status) {
+        HearingEntity hearingEntity = new HearingEntity();
+        hearingEntity.setId(2000000000L);
+        hearingEntity.setStatus(status);
         hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
         hearingEntity.setCaseHearingRequests(List.of(caseHearingRequestEntityWithPartyOrg()));
 
@@ -562,12 +774,13 @@ public class TestingUtil {
 
     public static HearingEntity getHearingsEntityForHearingActuals(String status) {
         HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
+        hearingEntity.setId(ID);
         hearingEntity.setStatus(status);
-        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
+        hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         hearingEntity.getCaseHearingRequests().add(caseHearingRequestEntityWithPartyOrg());
 
         CaseHearingRequestEntity caseHearingRequestEntity = hearingEntity.getLatestCaseHearingRequest();
+        caseHearingRequestEntity.setCaseHearingID(ID);
         caseHearingRequestEntity.setVersionNumber(1);
         caseHearingRequestEntity.setHearingType("hearingType");
         caseHearingRequestEntity.setHmctsServiceCode("serviceCode");
@@ -581,7 +794,9 @@ public class TestingUtil {
         caseHearingRequestEntity.setOwningLocationId("locationId");
         caseHearingRequestEntity.setCaseRestrictedFlag(true);
         caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 01, 01));
-        caseHearingRequestEntity.setHearingParties(Arrays.asList(hearingPartyEntityOrg()));
+        caseHearingRequestEntity.setHearingParties(List.of(hearingPartyEntitySetReference("reference2"),
+                                                                 hearingPartyEntitySetReference("reference"),
+                                                                 hearingPartyEntitySetReference("reference2")));
         caseHearingRequestEntity.setCaseCategories(caseCategoriesEntities());
 
         hearingEntity.getHearingResponses().get(0).setActualHearingEntity(actualHearingEntity(PartyType.ORG));
@@ -590,13 +805,14 @@ public class TestingUtil {
 
     public static HearingEntity getHearingsEntityForHearingActualsIndividual() {
         HearingEntity hearingEntity = new HearingEntity();
-        hearingEntity.setId(2000000000L);
+        hearingEntity.setId(ID);
         hearingEntity.setStatus("HEARING_REQUESTED");
-        hearingEntity.setHearingResponses(Arrays.asList(hearingResponseEntity()));
+        hearingEntity.setHearingResponses(List.of(hearingResponseEntity()));
         hearingEntity.getCaseHearingRequests().add(caseHearingRequestEntityWithPartyInd());
 
         CaseHearingRequestEntity caseHearingRequestEntity = hearingEntity.getLatestCaseHearingRequest();
         caseHearingRequestEntity.setVersionNumber(1);
+        caseHearingRequestEntity.setCaseHearingID(ID);
         caseHearingRequestEntity.setHearingType("hearingType");
         caseHearingRequestEntity.setHmctsServiceCode("serviceCode");
         caseHearingRequestEntity.setCaseReference("caseRef");
@@ -609,7 +825,7 @@ public class TestingUtil {
         caseHearingRequestEntity.setOwningLocationId("locationId");
         caseHearingRequestEntity.setCaseRestrictedFlag(true);
         caseHearingRequestEntity.setCaseSlaStartDate(LocalDate.of(2000, 01, 01));
-        caseHearingRequestEntity.setHearingParties(Arrays.asList(hearingPartyEntityInd()));
+        caseHearingRequestEntity.setHearingParties(List.of(hearingPartyEntityInd()));
         caseHearingRequestEntity.setCaseCategories(caseCategoriesEntities());
 
         hearingEntity.getHearingResponses().get(0).setActualHearingEntity(actualHearingEntity(PartyType.IND));
@@ -622,17 +838,18 @@ public class TestingUtil {
         entity.setHearingResultType(HearingResultType.ADJOURNED);
         entity.setHearingResultReasonType("resultReason");
         entity.setHearingResultDate(LocalDate.of(2000, 01, 01));
-        entity.setActualHearingDay(Arrays.asList(actualHearingDayEntity(partyType)));
+        entity.setActualHearingDay(List.of(actualHearingDayEntity(partyType)));
         entity.setActualHearingIsFinalFlag(true);
         return entity;
     }
 
     public static ActualPartyRelationshipDetailEntity actualPartyRelationshipDetailEntity(
         ActualHearingPartyEntity actualHearingPartyEntity) {
-        ActualPartyRelationshipDetailEntity entity = new ActualPartyRelationshipDetailEntity();
-        entity.setActualPartyRelationshipId(1L);
-        entity.setTargetActualPartyId(1L);
-        entity.setActualHearingParty(actualHearingPartyEntity);
+        ActualPartyRelationshipDetailEntity entity = ActualPartyRelationshipDetailEntity
+            .builder()
+            .actualPartyRelationshipId(1L)
+            .targetActualParty(actualHearingPartyEntity)
+            .sourceActualParty(actualHearingPartyEntity).build();
         return entity;
     }
 
@@ -641,8 +858,8 @@ public class TestingUtil {
         entity.setHearingDate(LocalDate.of(2000, 01, 01));
         entity.setStartDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
         entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
-        entity.setActualHearingDayPauses(Arrays.asList(actualHearingDayPausesEntity()));
-        entity.setActualHearingParty(Arrays.asList(actualHearingPartyEntity(partyType)));
+        entity.setActualHearingDayPauses(List.of(actualHearingDayPausesEntity()));
+        entity.setActualHearingParty(List.of(actualHearingPartyEntity(partyType)));
         return entity;
     }
 
@@ -659,8 +876,8 @@ public class TestingUtil {
         entity.setPartyId("1");
         entity.setActualPartyRoleType("roleType");
         entity.setDidNotAttendFlag(false);
-        entity.setActualAttendeeIndividualDetail(Arrays.asList(actualAttendeeIndividualDetailEntity(partyType)));
-        entity.setActualPartyRelationshipDetail(Arrays.asList(actualPartyRelationshipDetailEntity(entity)));
+        entity.setActualAttendeeIndividualDetail(actualAttendeeIndividualDetailEntity(partyType));
+        entity.setActualPartyRelationshipDetail(List.of(actualPartyRelationshipDetailEntity(entity)));
         return entity;
     }
 
@@ -685,7 +902,21 @@ public class TestingUtil {
         entity.setListingStatus(ListingStatus.FIXED.name());
         entity.setListingCaseStatus(ListAssistCaseStatus.CASE_CREATED.name());
         entity.setCancellationReasonType("Cancelled Reason 1");
-        entity.setHearingDayDetails(Arrays.asList(hearingDayDetailsEntity()));
+        entity.setHearingDayDetails(List.of(hearingDayDetailsEntity()));
+        return entity;
+    }
+
+    public static HearingResponseEntity hearingResponseEntity(Integer version, Integer requestVersion,
+                                                              LocalDateTime requestTimestamp,
+                                                              List<HearingDayDetailsEntity> hearingDayDetailsEntities) {
+        HearingResponseEntity entity = new HearingResponseEntity();
+        entity.setRequestVersion(requestVersion);
+        entity.setRequestTimeStamp(requestTimestamp);
+        entity.setHearingResponseId(2L);
+        entity.setListingStatus(ListingStatus.FIXED.name());
+        entity.setListingCaseStatus(ListAssistCaseStatus.CASE_CREATED.name());
+        entity.setCancellationReasonType("Cancelled Reason 1");
+        entity.setHearingDayDetails(hearingDayDetailsEntities);
         return entity;
     }
 
@@ -694,11 +925,33 @@ public class TestingUtil {
         entity.setStartDateTime(LocalDateTime.of(2000, 8, 10, 12, 20));
         entity.setEndDateTime(LocalDateTime.of(2000, 8, 10, 12, 20));
         entity.setRoomId("roomId");
-        entity.setListAssistSessionId("sessionId");
         entity.setVenueId("venueId");
 
         HearingAttendeeDetailsEntity attendee = new HearingAttendeeDetailsEntity();
-        entity.setHearingAttendeeDetails(List.of(attendee));
+        attendee.setId(ID);
+        attendee.setPartySubChannelType("partySubChannelA");
+        attendee.setPartyId("reference");
+
+        HearingAttendeeDetailsEntity attendee2 = new HearingAttendeeDetailsEntity();
+        attendee2.setId(ID);
+        attendee2.setPartySubChannelType("partySubChannelB");
+        attendee2.setPartyId("reference2");
+
+
+        HearingAttendeeDetailsEntity attendee3 = new HearingAttendeeDetailsEntity();
+        attendee3.setId(ID);
+        attendee3.setPartySubChannelType("partySubChannelC");
+        attendee3.setPartyId("reference3");
+        entity.setHearingAttendeeDetails(List.of(attendee, attendee2, attendee3));
+        return entity;
+    }
+
+    public static HearingDayDetailsEntity hearingDayDetailsEntity(LocalDateTime startDateTime) {
+        HearingDayDetailsEntity entity = new HearingDayDetailsEntity();
+        entity.setStartDateTime(startDateTime);
+        entity.setEndDateTime(LocalDateTime.parse("2021-08-10T12:20:00"));
+        entity.setVenueId("venue1");
+        entity.setRoomId("room1");
         return entity;
     }
 
@@ -707,8 +960,20 @@ public class TestingUtil {
         entity.setPartyReference("reference");
         entity.setPartyType(PartyType.ORG);
         entity.setPartyRoleType("role");
-        entity.setUnavailabilityEntity(List.of(unavailabilityEntity()));
+        entity.setUnavailabilityEntity(unavailabilityEntity());
         entity.setOrganisationDetailEntity(organisationDetailEntity());
+
+        return entity;
+    }
+
+    public static HearingPartyEntity hearingPartyEntitySetReference(String partyReference) {
+        HearingPartyEntity entity = new HearingPartyEntity();
+        entity.setPartyReference(partyReference);
+        entity.setPartyType(PartyType.ORG);
+        entity.setPartyRoleType("role");
+        entity.setUnavailabilityEntity(unavailabilityEntity());
+        entity.setOrganisationDetailEntity(organisationDetailEntity());
+        entity.setCaseHearing(caseHearingRequestEntityWithPartyOrg());
 
         return entity;
     }
@@ -719,24 +984,41 @@ public class TestingUtil {
         entity.setPartyType(PartyType.IND);
         entity.setPartyRoleType("role");
         entity.setContactDetails(List.of(contactDetailsEntity_Email(), contactDetailsEntity_Phone()));
-        entity.setIndividualDetailEntity(List.of(individualDetailEntity()));
+        entity.setIndividualDetailEntity(individualDetailEntity());
+        entity.setCaseHearing(caseHearingRequestEntityWithPartyOrg());
+        entity.setReasonableAdjustmentsEntity(List.of(reasonableAdjustmentsEntity()));
+        entity.setPartyRelationshipDetailsEntity(List.of(partyRelationshipDetailsEntity("P1", "A"),
+                partyRelationshipDetailsEntity("P2", "B")));
         return entity;
+    }
+
+    private static PartyRelationshipDetailsEntity partyRelationshipDetailsEntity(String targetTechPartyId,
+                                                                                 String relationshipType) {
+
+        HearingPartyEntity targetHearingPartyEntity = new HearingPartyEntity();
+        targetHearingPartyEntity.setPartyReference(targetTechPartyId);
+
+        return PartyRelationshipDetailsEntity.builder()
+                .targetTechParty(targetHearingPartyEntity)
+                .relationshipType(relationshipType)
+                .build();
     }
 
     private static CaseHearingRequestEntity caseHearingRequestEntityWithPartyOrg() {
         CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
         entity1.setVersionNumber(1);
-        entity1.setCaseHearingID(2000000000L);
+        entity1.setCaseHearingID(ID);
         entity1.setHmctsServiceCode("ABA1");
         entity1.setCaseReference("12345");
         entity1.setHearingType("Some hearing type");
+        entity1.setHearingParties(List.of(hearingPartyEntityOrg()));
         return entity1;
     }
 
     private static CaseHearingRequestEntity caseHearingRequestEntityWithPartyInd() {
         CaseHearingRequestEntity entity1 = new CaseHearingRequestEntity();
         entity1.setVersionNumber(1);
-        entity1.setCaseHearingID(2000000000L);
+        entity1.setCaseHearingID(ID);
 
         entity1.setHearing(getCaseHearingsEntity());
         entity1.setHmctsServiceCode("ABA1");
@@ -781,7 +1063,7 @@ public class TestingUtil {
             partyDetails2.setOrganisationDetails(organisationDetails());
         }
 
-        List<PartyDetails> partyDetails = Lists.newArrayList(partyDetails1, partyDetails2);
+        List<PartyDetails> partyDetails = List.of(partyDetails1, partyDetails2);
         return partyDetails;
     }
 
@@ -794,7 +1076,7 @@ public class TestingUtil {
         detail2.setUnavailableFromDate(LocalDate.parse("2030-10-20"));
         detail2.setUnavailableToDate(LocalDate.parse("2030-10-22"));
         detail2.setUnavailabilityType("All Day");
-        List<UnavailabilityRanges> unavailabilityRanges = Lists.newArrayList(detail1, detail2);
+        List<UnavailabilityRanges> unavailabilityRanges = List.of(detail1, detail2);
         return unavailabilityRanges;
     }
 
@@ -812,13 +1094,14 @@ public class TestingUtil {
     public static HearingDetails hearingDetailsWithAllFields() {
         HearingDetails hearingDetails = new HearingDetails();
         hearingDetails.setAutoListFlag(true);
+        hearingDetails.setAmendReasonCode("reason");
         hearingDetails.setHearingType("Some hearing type");
         HearingWindow hearingWindow = new HearingWindow();
         hearingWindow.setDateRangeEnd(LocalDate.parse("2017-03-01"));
         hearingWindow.setDateRangeStart(LocalDate.parse("2017-03-01"));
         hearingDetails.setHearingWindow(hearingWindow);
-        hearingDetails.setDuration(60);
-        hearingDetails.setNonStandardHearingDurationReasons(Arrays.asList("First reason", "Second reason"));
+        hearingDetails.setDuration(360);
+        hearingDetails.setNonStandardHearingDurationReasons(List.of("First reason", "Second reason"));
         hearingDetails.setHearingPriorityType("Priority type");
         hearingDetails.setNumberOfPhysicalAttendees(4);
         hearingDetails.setHearingInWelshFlag(false);
@@ -828,14 +1111,14 @@ public class TestingUtil {
         List<HearingLocation> hearingLocations = new ArrayList<>();
         hearingLocations.add(location1);
         hearingDetails.setHearingLocations(hearingLocations);
-        hearingDetails.setFacilitiesRequired(Arrays.asList("facility1", "facility2"));
+        hearingDetails.setFacilitiesRequired(List.of("facility1", "facility2"));
         hearingDetails.setListingComments("Some listing comments");
         hearingDetails.setHearingRequester("Some judge");
         hearingDetails.setPrivateHearingRequiredFlag(false);
         hearingDetails.setLeadJudgeContractType("AB123");
         hearingDetails.setPanelRequirements(TestingUtil.panelRequirements());
         hearingDetails.getPanelRequirements().setPanelPreferences(TestingUtil.panelPreferences());
-        hearingDetails.getPanelRequirements().setPanelSpecialisms(Arrays.asList("Specialism 1"));
+        hearingDetails.getPanelRequirements().setPanelSpecialisms(List.of("Specialism 1"));
         hearingDetails.setHearingIsLinkedFlag(false);
         hearingDetails.setPanelRequirements(panelRequirementsList());
         return hearingDetails;
@@ -843,9 +1126,9 @@ public class TestingUtil {
 
     public static PanelRequirements panelRequirementsList() {
         PanelRequirements panelRequirements = new PanelRequirements();
-        panelRequirements.setRoleType(Arrays.asList("RoleType1", "RoleType2"));
-        panelRequirements.setAuthorisationTypes(Arrays.asList("AuthorisationType1", "AuthorisationType2"));
-        panelRequirements.setAuthorisationSubType(Arrays.asList("AuthorisationSubType2", "AuthorisationSubType2"));
+        panelRequirements.setRoleType(List.of("RoleType1", "RoleType2"));
+        panelRequirements.setAuthorisationTypes(List.of("AuthorisationType1", "AuthorisationType2"));
+        panelRequirements.setAuthorisationSubType(List.of("AuthorisationSubType2", "AuthorisationSubType2"));
         return panelRequirements;
     }
 
@@ -858,7 +1141,7 @@ public class TestingUtil {
         panelPreferenceTwo.setRequirementType("OPTINC");
         panelPreferenceTwo.setMemberType("Member type 2");
         panelPreferenceTwo.setMemberID("MID999");
-        List<PanelPreference> panelPreferences = Arrays.asList(panelPreference, panelPreferenceTwo);
+        List<PanelPreference> panelPreferences = List.of(panelPreference, panelPreferenceTwo);
         return panelPreferences;
     }
 
@@ -869,18 +1152,18 @@ public class TestingUtil {
         individualDetails.setLastName("Jason");
         individualDetails.setPreferredHearingChannel("channel 5");
         individualDetails.setInterpreterLanguage("French");
-        individualDetails.setReasonableAdjustments(Arrays.asList("Adjust1", "Adjust2", "Adjust3"));
+        individualDetails.setReasonableAdjustments(List.of("Adjust1", "Adjust2", "Adjust3"));
         individualDetails.setVulnerableFlag(false);
         individualDetails.setVulnerabilityDetails("More vulnerable");
         individualDetails.setHearingChannelPhone(List.of("01111111111"));
         individualDetails.setHearingChannelEmail(List.of("hearing.channel_udated@email.com"));
         List<RelatedParty> relatedParties = new ArrayList<>();
         RelatedParty relatedParty1 = new RelatedParty();
-        relatedParty1.setRelatedPartyID("Party1");
+        relatedParty1.setRelatedPartyID("P1");
         relatedParty1.setRelationshipType("Mother");
         relatedParties.add(relatedParty1);
         RelatedParty relatedParty2 = new RelatedParty();
-        relatedParty2.setRelatedPartyID("Party2");
+        relatedParty2.setRelatedPartyID("P2");
         relatedParty2.setRelationshipType("Father");
         relatedParties.add(relatedParty2);
         individualDetails.setRelatedParties(relatedParties);
@@ -891,5 +1174,104 @@ public class TestingUtil {
         DateTimeFormatter format = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
         return LocalDateTime.parse(dateStr, format);
     }
+
+    public static HearingActual hearingActualWithDuplicatedHearingDate() {
+        return hearingActual(hearingActualsOutcome(),
+                             List.of(actualHearingDay(LocalDate.of(2022, 3, 23)),
+                                           actualHearingDay(LocalDate.of(2022, 3, 23))));
+    }
+
+    public static HearingActual hearingActualWithHearingDateInFuture() {
+        return hearingActual(hearingActualsOutcome(),
+                             List.of(actualHearingDay(LocalDate.of(2022, 3, 23)),
+                                           actualHearingDay(LocalDate.of(2922, 3, 23))));
+    }
+
+    public static HearingActual hearingActualWithHearingDates(List<ActualHearingDay> actualHearingDays) {
+        return hearingActual(hearingActualsOutcome(), actualHearingDays);
+    }
+
+    public static HearingActual hearingActual() {
+        HearingActual request = new HearingActual();
+        request.setHearingOutcome(hearingActualsOutcome());
+        request.setActualHearingDays(List.of(actualHearingDay(LocalDate.of(2022, 1, 28))));
+
+        return request;
+    }
+
+    public static HearingActual hearingActual(HearingActualsOutcome outcome, List<ActualHearingDay> actualHearingDays) {
+        HearingActual request = new HearingActual();
+        request.setHearingOutcome(outcome);
+        request.setActualHearingDays(actualHearingDays);
+        return request;
+    }
+
+    public static HearingActualsOutcome hearingActualsOutcome() {
+        HearingActualsOutcome hearingActualsOutcome = new HearingActualsOutcome();
+        hearingActualsOutcome.setHearingType("Witness Statement");
+        hearingActualsOutcome.setHearingFinalFlag(false);
+        hearingActualsOutcome.setHearingResult("COMPLETED");
+        hearingActualsOutcome.setHearingResultReasonType("Nothing more to hear");
+        hearingActualsOutcome.setHearingResultDate(LocalDate.of(2022, 2, 1));
+        return hearingActualsOutcome;
+    }
+
+    public static HearingActualsOutcome hearingActualsOutcome(String hearingResult,
+                                                              String hearingResultReasonType) {
+        HearingActualsOutcome hearingActualsOutcome = hearingActualsOutcome();
+        hearingActualsOutcome.setHearingResult(hearingResult);
+        hearingActualsOutcome.setHearingResultReasonType(hearingResultReasonType);
+        return hearingActualsOutcome;
+    }
+
+    public static ActualHearingDay actualHearingDay(LocalDate hearingDate) {
+        ActualHearingDay actualHearingDay = new ActualHearingDay();
+        actualHearingDay.setHearingDate(hearingDate);
+        actualHearingDay.setHearingStartTime(LocalDateTime.of(hearingDate, LocalTime.of(10, 0)));
+        actualHearingDay.setHearingEndTime(LocalDateTime.of(hearingDate, LocalTime.of(15, 0)));
+        actualHearingDay.setPauseDateTimes(List.of(actualHearingPauseDateTime(
+            LocalDateTime.of(hearingDate, LocalTime.of(12, 0)),
+            LocalDateTime.of(hearingDate, LocalTime.of(12, 30))
+        )));
+
+        actualHearingDay.setActualDayParties(List.of(
+            actualHearingParty(123L, "43333", actualHearingPartyDetails("WitnessForeName1", "WitnessLastName1"),
+                               "claiming party", false
+            )
+        ));
+        return actualHearingDay;
+    }
+
+    private static ActualHearingDayParties actualHearingParty(Long partyId,
+                                                              String partyRole,
+                                                              ActualHearingDayPartyDetail partyDetail,
+                                                              String partyChannelSubType,
+                                                              Boolean didNotAttendFlag) {
+        ActualHearingDayParties parties = new ActualHearingDayParties();
+
+        parties.setActualPartyId(partyId.toString());
+        parties.setPartyRole(partyRole);
+        parties.setIndividualDetails(partyDetail);
+        parties.setPartyChannelSubType(partyChannelSubType);
+        parties.setDidNotAttendFlag(didNotAttendFlag);
+
+        return parties;
+    }
+
+    private static ActualHearingDayPartyDetail actualHearingPartyDetails(String firstName, String lastName) {
+        ActualHearingDayPartyDetail partyDetail = new ActualHearingDayPartyDetail();
+        partyDetail.setFirstName(firstName);
+        partyDetail.setLastName(lastName);
+        return partyDetail;
+    }
+
+    private static ActualHearingDayPauseDayTime actualHearingPauseDateTime(LocalDateTime pauseStartTime,
+                                                                           LocalDateTime pauseEndTime) {
+        ActualHearingDayPauseDayTime pauseDayTime = new ActualHearingDayPauseDayTime();
+        pauseDayTime.setPauseStartTime(pauseStartTime);
+        pauseDayTime.setPauseEndTime(pauseEndTime);
+        return pauseDayTime;
+    }
+
 }
 
